# VoxelGame

./: .gitmodules  CMakeLists.txt  VoxelGame.sln  VoxelGame.vcxproj  VoxelGame.vcxproj.filters  voxel_game.cpp
libs/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  cmake_install.cmake
libs/glfw/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
src/: main.cpp
